# py-api-template

./: .env.example  .gitignore  Dockerfile  README.MD  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: initialize.yml
.patches/: includeAliSms.patch
common/: __init__.py  __test__.py  bcrypt.py  jwt.py  log.py  models.py  redis.py  routes.py  sms.py
db/: __init__.py
db/migrations/: env.py  models.py
